--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -1,8 +1,13 @@
 name: TypeScript Lint and Reviewdog
 on:
+    push:
+        branches:
+            - main
+            - development
     pull_request:
         branches:
             - main
+            - development
 jobs:
     lint:
         runs-on: ubuntu-latest
@@ -17,11 +22,15 @@ jobs:
               with:
                   node-version: "20.x"
 
-            # Step 3: Install ESLint for development
+            # Step 3:  Install dependencies
+            - name: Install Dependencies
+              run: npm install
+
+            # Step 4: Install ESLint for development
             - name: Install ESLint for development
               run: npm install --save-dev eslint @eslint/js @types/eslint__js typescript typescript-eslint
 
-            # Step 4: Run ESLint with Reviewdog
+            # Step 5: Run ESLint with Reviewdog
             - name: Run ESLint with Reviewdog
               uses: reviewdog/action-eslint@v1
               with:
@@ -30,3 +39,7 @@ jobs:
                   level: error
               env:
                   REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            
+            # Step 6: Run Jest tests
+            - name: Run Jest tests
+              run: npm test
