--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.6.0",
     "@types/supertest": "^6.0.3",
+    "dotenv": "^17.2.3",
     "jest": "^30.2.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
