--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
     "helmet": "^8.1.0",
