--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -26,4 +26,6 @@ jobs:
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_dir: ./docs
-                  publish_branch: gh-pages
+                  publish_branch: gh-pages 
+
+                  <!-- test -->
