--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "start": "ts-node src/server.ts"
+    "start": "ts-node src/server.ts",
+    "generate-docs": "ts-node scripts/generate-openapi.ts && npx @redocly/cli build-docs openapi.json --output docs/index.html"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/joshsxlud/salud_josh_assignment_2_3018#readme",
   "devDependencies": {
+    "@redocly/cli": "^2.11.1",
     "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.6.0",
